Shenandoah: failed vmTestbase/nsk/jvmti/AttachOnDemand/attach021/TestDescription.java test

XMLWordPrintable

    • gc
    • b33

        Fastdebug JVM failed above test with ShenandoahGC.

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (src/hotspot/share/gc/shenandoah/shenandoahBarrierSet.inline.hpp:54), pid=12266, tid=12267
        # assert(_satb_mark_queue_set.is_active()) failed: only get here when SATB active
        #
        # JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.zgu.jdk)
        # Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc.zgu.jdk, mixed mode, sharing, tiered, compressed oops, shenandoah gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x162a4ac] ShenandoahHeap::keep_alive(oop)+0x28c
        #


              Assignee:
              Zhengyu Gu
              Reporter:
              Zhengyu Gu
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: