src/hotspot/share/gc/shenandoah/shenandoahHeap.cpp
@@ -1330,7 +1330,12 @@ void ShenandoahHeap::object_iterate(ObjectClosure* cl) {
 
 // Keep alive an object that was loaded with AS_NO_KEEPALIVE.
 void ShenandoahHeap::keep_alive(oop obj) {
-  ShenandoahBarrierSet::barrier_set()->enqueue(obj);
+  if (is_concurrent_mark_in_progress()) {
+    ShenandoahBarrierSet::barrier_set()->enqueue(obj);
+  } else {
+    // Otherwise, it must be live, guaranteed by LRB
+    shenandoah_assert_marked_if(NULL, obj, has_forwarded_objects());
+  }
 }
 
 void ShenandoahHeap::heap_region_iterate(ShenandoahHeapRegionClosure* blk) const {
